# engineer

./: .arm_builder.json  .gitignore_local_backup  CMakeLists.txt  STM32H723XG_FLASH.ld  arm-gcc-toolchain.cmake
.github/scripts/: ai_review.py
.github/workflows/: ai-review.yml
CMake/config/: pyro_format.cmake  pyro_robot_id_config.cmake  random_show.bat
CMake/config/warning/: err1.txt  err10.txt  err11.txt  err12.txt  err13.txt  err14.txt  err2.txt  err3.txt  err4.txt  err5.txt  err6.txt  err7.txt  err8.txt  err9.txt
CubeMX/: CMakeLists.txt  CubeMX.ioc  STM32H723XG_FLASH.ld
CubeMX/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_it.h
CubeMX/Core/Src/: dma.c  fdcan.c  freertos.c  gpio.c  main.c  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c
PYRo/: .gitignore  CMakeLists.txt
PYRo/Algorithm/Common/: pyro_algo_common.cpp  pyro_algo_common.h
PYRo/Algorithm/Kinematics/: pyro_kin.wl.h  pyro_kin_hybrid.cpp  pyro_kin_hybrid.h  pyro_kin_mec.cpp  pyro_kin_mec.h  pyro_kin_rudder.cpp  pyro_kin_rudder.h  pyro_kin_wl.cpp
PYRo/Algorithm/LESO/: pyro_algo_leso.h  pyro_algo_leso.tpp
PYRo/Algorithm/Navigation/: pyro_nav_hub.cpp  pyro_nav_hub.h
PYRo/Algorithm/PID/: pyro_algo_pid.cpp  pyro_algo_pid.h
PYRo/Algorithm/Powercontrol/: pyro_power_control.cpp  pyro_power_control.h
PYRo/Component/INS/: pyro_ins.cpp  pyro_ins.h
PYRo/Component/Image/: pyro_image_drv.cpp  pyro_image_drv.h
PYRo/Component/Motor/: pyro_dji_motor_drv.cpp  pyro_dji_motor_drv.h  pyro_dm_motor_drv.cpp  pyro_dm_motor_drv.h  pyro_motor_base.cpp  pyro_motor_base.h
PYRo/Component/Powermeter/: pyro_powermeter.cpp  pyro_powermeter.h
PYRo/Component/RC/: README.md  pyro_dr16_rc_drv.cpp  pyro_dr16_rc_drv.h  pyro_rc_base_drv.cpp  pyro_rc_base_drv.h  pyro_rc_core.h  pyro_virtual_rc.h  pyro_vt03_rc_drv.cpp  pyro_vt03_rc_drv.h
PYRo/Component/Referee/: protocol.h  pyro_referee.cpp  pyro_referee.h
PYRo/Component/Referee/UI/: pyro_ui_drv.cpp  pyro_ui_drv.h
PYRo/Component/SR/: pyro_sonic_base_drv.cpp  pyro_sonic_base_drv.h  pyro_sr04_drv.cpp  pyro_sr04_drv.h  pyro_sr05_drv.cpp  pyro_sr05_drv.h  pyro_us100_drv.cpp  pyro_us100_drv.h
PYRo/Component/Supercap/: pyro_supercap_drv.cpp  pyro_supercap_drv.h
PYRo/Core/Config/: pyro_core_config.h
PYRo/Core/DataBoard/: pyro_databoard.h
PYRo/Core/Def/: pyro_core_def.h
PYRo/Core/Memory/: pyro_core_dma_heap.c
PYRo/Core/Task/: pyro_task.cpp  pyro_task.h
PYRo/Debug/: Debug_task.cpp
PYRo/Debug/JCOM/: pyro_jcom.cpp  pyro_jcom.h
PYRo/Debug/VOFA/: pyro_vofa.cpp  pyro_vofa.h
PYRo/Device/BMI088/: BMI088_driver.cpp  BMI088_driver.h  BMI088_middleware.cpp  BMI088_middleware.h  BMI088_reg.h
PYRo/Module/: README.md  pyro_module_base.h  pyro_module_base.tpp
PYRo/Peripheral/CAN/: pyro_bsp_can.cpp  pyro_bsp_can.h  pyro_can_drv.cpp  pyro_can_drv.h
PYRo/Peripheral/UART/: README.md  pyro_bsp_uart.cpp  pyro_bsp_uart.h  pyro_uart_drv.cpp  pyro_uart_drv.h
Robot/: CMakeLists.txt  pyro_init_thread.cpp  pyro_mission_planer.cpp
Robot/Arm/: arm_control_execute.cpp  pyro_typedef.h
Robot/Engineer/: CMakeLists.txt
Robot/Engineer/Arm/: arm_control_execute.cpp  arm_control_execute.h  pyro_arm_interboard_thread.cpp  pyro_arm_interboard_thread.h  pyro_debug_thread.cpp  pyro_init_thread.cpp  pyro_mission_planer.cpp  pyro_processing_thread.cpp  pyro_receive_thread.cpp  pyro_typedef.h  readme.txt  self_control_command.cpp  self_control_command.h
Robot/Engineer/DataBoard/: databoard.md  pyro_databoard.cpp  pyro_databoard.h
Robot/Engineer/Trajectory_generator/: action_register.cpp  action_register.h  motion_planner.cpp  motion_planner.h  virtual_controller.cpp  virtual_controller.h
